added autoencoder head
- autoencoder head and train scripts
- some network structure changes

--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -27,6 +27,9 @@
     "from retinanet.datasets.transforms import *\n",
     "from retinanet.datasets.utils import TransformDatasetWrapper\n",
     "\n",
+    "from retinanet.model.utils import load_chpt\n",
+    "\n",
+    "\n",
     "import os\n",
     "import cv2\n",
     "import random\n",
@@ -89,7 +92,7 @@
     "\n",
     "dataset = BirdDetection(images_dir=\"../dataset/data\", annotations_dir=\"../dataset/ann\")\n",
     "dataset = TransformDatasetWrapper(dataset, transform)\n",
-    "model = retinanet_resnet50_fpn(num_classes=2, pretrained=False, pretrained_backbone=False)\n",
+    "model = retinanet_resnet50_fpn(num_classes=2, pretrained=False, pretrained_backbone=False, extra_heads=[\"cls\"])\n",
     "\n",
     "model = model.to(device)\n",
     "model.eval()"
@@ -107,7 +110,6 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -117,7 +119,7 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 0_1.det_scratch_test \\\n",
+    "                            --tag 0_1.det_scratch_temp \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
@@ -678,7 +680,382 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Image Level Classifier with transfer learning"
+    "## Train Image Level Classifier and Autoencoder from scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "E3DU00viFGPV",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/auto_encoder_train.py \\\n",
+    "                            --opt adam \\\n",
+    "                            --lr 1e-4 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --lr_warmup 4e-2 \\\n",
+    "                            --weight_decay 4e-5 \\\n",
+    "                            --max_epoch 130 \\\n",
+    "                            --batch_size 12 \\\n",
+    "                            --accumulation_steps 3 \\\n",
+    "                            --tag 4_1.img_cls_regen_scratch \\\n",
+    "                            --train_percent .90 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../data/train \\\n",
+    "                            --log_dir $(pwd)/experiments \\\n",
+    "                            --load_from_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_4_1.img_cls_regen_scratch.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = random.randint(0, len(dataset)-1)\n",
+    "img = dataset[idx][0]\n",
+    "\n",
+    "model.eval()\n",
+    "#get features\n",
+    "features = get_features(model, [img], device)\n",
+    "\n",
+    "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
+    "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
+    "\n",
+    "# print(img.shape)\n",
+    "# for feat in imact:\n",
+    "#     print(feat.shape)\n",
+    "#     print(resize_func(feat, img.shape[1:]).shape)\n",
+    "\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
+    "for j in range(1, 6):\n",
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finetune on Detection Task\n",
+    "#### (transfer learning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "E3DU00viFGPV",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
+    "                            --lr 3e-5 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --max_epoch 100 \\\n",
+    "                            --batch_size 4 \\\n",
+    "                            --tag 4_2.ft_det_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/chpt_4_1.img_cls_regen_scratch.pth \\\n",
+    "                            --train_percent .7 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../dataset/segmented_detection \\\n",
+    "                            --load_from_json \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
+    "                            --batch_size 1 \\\n",
+    "                            --tag 4_2_largeImageEval.ft_det_autoencoder_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/chpt_4_2.ft_det_scratch.pth \\\n",
+    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_4_2.ft_det_scratch.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = random.randint(0, len(dataset)-1)\n",
+    "img = dataset[idx][0]\n",
+    "\n",
+    "#get features\n",
+    "features = get_features(model, [img], device)\n",
+    "\n",
+    "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
+    "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
+    "\n",
+    "# print(img.shape)\n",
+    "# for feat in imact:\n",
+    "#     print(feat.shape)\n",
+    "#     print(resize_func(feat, img.shape[1:]).shape)\n",
+    "\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
+    "for j in range(1, 6):\n",
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Image Level Classifier and Autoencoder with transfer learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "E3DU00viFGPV",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/auto_encoder_train.py \\\n",
+    "                            --opt adam \\\n",
+    "                            --lr 1e-4 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --lr_warmup 4e-2 \\\n",
+    "                            --weight_decay 4e-5 \\\n",
+    "                            --max_epoch 130 \\\n",
+    "                            --batch_size 12 \\\n",
+    "                            --accumulation_steps 3 \\\n",
+    "                            --tag 5_1.img_cls_regen_transferlr \\\n",
+    "                            --pretrained_backend \\\n",
+    "                            --train_percent .90 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../data/train \\\n",
+    "                            --log_dir $(pwd)/experiments \\\n",
+    "                            --load_from_json "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_5_1.img_cls_regen_transferlr.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = random.randint(0, len(dataset)-1)\n",
+    "img = dataset[idx][0]\n",
+    "\n",
+    "model.eval()\n",
+    "#get features\n",
+    "features = get_features(model, [img], device)\n",
+    "\n",
+    "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
+    "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
+    "\n",
+    "# print(img.shape)\n",
+    "# for feat in imact:\n",
+    "#     print(feat.shape)\n",
+    "#     print(resize_func(feat, img.shape[1:]).shape)\n",
+    "\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
+    "for j in range(1, 6):\n",
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finetune on Detection Task\n",
+    "#### (transfer learning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "E3DU00viFGPV",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_train.py \\\n",
+    "                            --lr 3e-5 \\\n",
+    "                            --lr_delta 1e-5 \\\n",
+    "                            --max_epoch 100 \\\n",
+    "                            --batch_size 4 \\\n",
+    "                            --tag 5_2.ft_det_transferlr \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/chpt_5_1.img_cls_regen_transferlr.pth \\\n",
+    "                            --train_percent .7 \\\n",
+    "                            --use_p_of_data 1 \\\n",
+    "                            --data_dir $(pwd)/../dataset/segmented_detection \\\n",
+    "                            --load_from_json \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
+    "                            --batch_size 1 \\\n",
+    "                            --tag 5_2_largeImageEval.ft_det_autoencoder_transferlr \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/chpt_5_2.ft_det_transferlr.pth \\\n",
+    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_5_2.ft_det_transferlr.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = random.randint(0, len(dataset)-1)\n",
+    "img = dataset[idx][0]\n",
+    "\n",
+    "#get features\n",
+    "features = get_features(model, [img], device)\n",
+    "\n",
+    "imact = [feat.squeeze().cpu().detach().numpy() for feat in features]\n",
+    "\n",
+    "# get predictions\n",
+    "predicted = model([img])\n",
+    "keep = torchvision.ops.nms(predicted[0][\"boxes\"], predicted[0][\"scores\"], 0.1)\n",
+    "keep = keep.cpu().numpy()\n",
+    "boxes = list(np.floor(predicted[0][\"boxes\"].cpu().detach().numpy()[keep]))\n",
+    "scores = list(predicted[0][\"scores\"].cpu().detach().numpy()[keep])\n",
+    "\n",
+    "# Visualize\n",
+    "fig, axarr = plt.subplots(2, 3, figsize=(15,10))\n",
+    "\n",
+    "# print(img.shape)\n",
+    "# for feat in imact:\n",
+    "#     print(feat.shape)\n",
+    "#     print(resize_func(feat, img.shape[1:]).shape)\n",
+    "\n",
+    "img = (img.cpu().permute((1, 2, 0)).numpy().copy() * np.array([0.229, 0.224, 0.225]) + np.array([0.485, 0.456, 0.406]))\n",
+    "\n",
+    "# visualize boxes\n",
+    "print(len(boxes))\n",
+    "for box, score in zip(boxes, scores):\n",
+    "    if score > 0.2:\n",
+    "        cv2.rectangle(img, (int(box[0]), int(box[1])), (int(box[2]), int(box[3])), (0, 0, 255), 2)\n",
+    "\n",
+    "axarr[0, 0].imshow(img)\n",
+    "# visualize features\n",
+    "for j in range(1, 6):\n",
+    "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train intermitent Image Level Classifier and detection with transfer learning"
    ]
   },
   {
