--- a/net_errors.ipynb
+++ b/net_errors.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%config Completer.use_jedi = False"
+    "## generate .rst report\n",
+    "!PYTHONPATH=$(pwd) python ./scripts/report.py"
    ]
   },
   {
@@ -15,8 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## generate .rst report\n",
-    "!PYTHONPATH=$(pwd) python ./scripts/report.py"
+    "%config Completer.use_jedi = False"
    ]
   },
   {
@@ -51,7 +51,10 @@
     "from retinanet.datasets.transforms import *\n",
     "from retinanet.datasets.utils import TransformDatasetWrapper, train_val_split\n",
     "\n",
+    "from retinanet.model.utils import load_chpt\n",
+    "\n",
     "from retinanet.utils.visualizatioin import vis_features, vis_features_CAM\n",
+    "from retinanet.utils import create_directory\n",
     "\n",
     "import os\n",
     "import cv2\n",
@@ -138,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = retinanet_resnet50_fpn(num_classes=2, pretrained=False, pretrained_backbone=False)\n",
+    "model = retinanet_resnet50_fpn(num_classes=2, pretrained=False, pretrained_backbone=False, extra_heads=[\"cls\"])\n",
     "\n",
     "model = model.to(device)\n",
     "model.eval()"
@@ -198,7 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_1_det_scratch.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_1.det_scratch.pth\"))"
    ]
   },
   {
@@ -242,7 +245,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_2_det_transferlr.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_2.det_transferlr_new_data.pth\"))"
    ]
   },
   {
@@ -251,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = train_dataset_det\n",
+    "ds = large_dataset\n",
     "idx = random.randint(0, len(ds)-1)\n",
     "img = ds[idx][0]\n",
     "gt_boxes = ds[idx][1][\"boxes\"]\n",
@@ -266,10 +269,12 @@
    "outputs": [],
    "source": [
     "ds = large_dataset\n",
+    "base_dir = \"reports/det_transferlr_new_data\"\n",
     "for idx, d in enumerate(ds):\n",
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
-    "    fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.2, device=device, path=f\"reports/det_transferlr/{idx}.jpg\")"
+    "    create_directory(base_dir)\n",
+    "    fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.2, device=device, path=f\"{base_dir}/{idx}.jpg\")"
    ]
   },
   {
@@ -575,6 +580,187 @@
     "    img = ds[idx][0]\n",
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
     "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/cls_det_scratch/{idx}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize training with autoencoder and image level cls and detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### from scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_4_1.img_cls_regen_scratch.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "idx = random.randint(0, len(ds)-1)\n",
+    "img = ds[idx][0]\n",
+    "gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "\n",
+    "fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_4_2.ft_det_scratch.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "idx = random.randint(0, len(ds)-1)\n",
+    "img = ds[idx][0]\n",
+    "gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "\n",
+    "fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.1, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "for idx, d in enumerate(ds):\n",
+    "    img = ds[idx][0]\n",
+    "    gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/cls_regen_det_scratch/{idx}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### transfer learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_5_1.img_cls_regen_transferlr.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weight = model.head.extra_heads.image_classification_head.fc.weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "idx = random.randint(0, len(ds)-1)\n",
+    "img = ds[idx][0]\n",
+    "gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "\n",
+    "fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model = load_chpt(model, \"/workspace8/RetinaNet/experiments/checkpoints/chpt_5_2.ft_det_transferlr.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if the classification head is loaded correctly\n",
+    "#    the classification head is requaired for CAM visualizations\n",
+    "torch.all(weight == model.head.extra_heads.image_classification_head.fc.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "idx = random.randint(0, len(ds)-1)\n",
+    "img = ds[idx][0]\n",
+    "gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "\n",
+    "fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0.0, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "for idx, d in enumerate(ds):\n",
+    "    img = ds[idx][0]\n",
+    "    gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/cls_regen_det_transferlr/{idx}.jpg\")"
    ]
   }
  ],
